<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.valortask.view.activity.authentication_module.viewmodel.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ui.activity.authentication_module.view.LoginActivity">



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvPassword"
            android:layout_margin="@dimen/_16dp"
            android:hint="Mobile Number"
            app:startIconDrawable="@drawable/baseline_phone_24"
            app:startIconTint="?attr/colorPrimary"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:layout_constraintVertical_chainStyle="packed">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@={viewModel.userPhone}"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvUserName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:hint="Password"
            app:startIconDrawable="@drawable/baseline_vpn_key_24"
            app:startIconTint="?attr/colorPrimary"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:layout_constraintBottom_toTopOf="@id/btnLogin"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="?attr/colorPrimary"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewModel.userPassword}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/_16dp"
            app:layout_constraintBottom_toTopOf="@id/tvTitleDoNotHaveAnAccount"
            android:text="Login"/>




        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitleDoNotHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="Do not have an account"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintEnd_toStartOf="@id/btnRegister"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/_16dp"
            android:textColor="@color/primaryDarkColor"/>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="Register"
            app:layout_constraintStart_toEndOf="@id/tvTitleDoNotHaveAnAccount"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/_8dp"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"
            android:padding="@dimen/_8dp"
            android:textSize="16sp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>